tests/unit/evaluation/minizinc/regression/round.mzn_fd.err
MiniZinc: evaluation error: internal error: missing builtin 'round'
 in file round.mzn:8
